@@ -1,8 +1,10 @@
 export(CA)
+export(CN)
 export(CW)
 export(delete)
 export(doc_temp)
 export(folder)
+export(FT)
 export(GQ)
 export(html5)
 export(LL)
