@@ -1,20 +1,20 @@
-#' Capitalize Every Word of String
+#' Wrap Text With Courier New Font Tag
 #' 
-#' Capitalizes every word of a string. 
+#' Wraps text with a courier new font tag. A specified version of \code{QF} but 
+#' more convient for constant use of courier new tags. 
 #' 
 #' @param text character vector or text copied to the clipboard.  Default is to 
 #' read from the clipboard.
 #' @param copy2clip logical.  If \code{TRUE} attempts to copy the output to the 
 #' clipboard.
-#' @details This capitalizes every word of a string.  
-#' @return Returns a character vector every word capitalized.
+#' @return Returns a character vector wrapped with a courier new font tag.
 #' @section Warning: Ligatures parsing is very good, however, these elements my
 #' be incorrect.  If a warning is thrown check the use of "ff", "fi", "fl", 
 #' "ffi" and "ffl".
 #' @export
 #' @examples
-#' CA("the flexible, efficient way to do reports.")
-CA <- function(text = "clipboard", copy2clip = TRUE) { 
+#' CN("new_report()")
+CN <- function(text = "clipboard", copy2clip = TRUE) { 
     if (Sys.info()["sysname"] != "Windows") {
         writeClipboard <- NULL
     }  
@@ -40,12 +40,7 @@ CA <- function(text = "clipboard", copy2clip = TRUE) {
         plural <- ifelse(nligs > 1, "ligatures were", "ligature was")
         warning(paste(nligs, "possible", plural, "found: \nCheck output!"))
     }
-    simpleCap <- function(x) { 
-        s <- strsplit(x, " ")[[1]] 
-        paste(toupper(substring(s, 1,1)), substring(s, 2), 
-            sep="", collapse=" ") 
-    } 
-    x <- unlist(lapply(tolower(text), simpleCap)) 
+    x <- noquote(paste0("\"<font face=\"courier\">", text, "</font>"))
     if(copy2clip){
         if (Sys.info()["sysname"] == "Windows") {
             writeClipboard(x, format = 1)
